--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -36,7 +36,7 @@ jobs:
         bundle exec fastlane prebuild
 
     - name: Build iOS app
-      run: flutter build ipa
+      run: flutter build ipa --no-codesign
 
     # - name: Build iOS app
     #   run: flutter build ios --release
