--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -1,3 +1,14 @@
+name: None
+on:
+  push:
+    branches:
+      - no-trigger
+jobs:
+  none:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "No trigger"
+
 # name: Manual Trigger
 #
 # on:
