--- a/.github/workflows/build-wallet-core.yaml
+++ b/.github/workflows/build-wallet-core.yaml
@@ -42,5 +42,5 @@ jobs:
           TELEGRAM_BOT_API_TOKEN: ${{ secrets.TELEGRAM_BOT_API_TOKEN }}
           TELEGRAM_BOT_ME_CHAT_ID: ${{ secrets.TELEGRAM_BOT_ME_CHAT_ID }}
           OUTPUT_LINK: ${{ steps.upload-artifact.outputs.artifact-url }}
-          OUTPUT_NAME: wallet-core-osx
+          OUTPUT_NAME: wallet\\-core\\-osx
         run: bash ${{ github.workspace }}/bot/scripts/telegram/notify.sh
