build and send files

--- a/.github/workflows/build-market-home.yaml
+++ b/.github/workflows/build-market-home.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build-market-home:
+  build-market-home-appbundle:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
@@ -27,3 +27,37 @@ jobs:
 
     - name: Build Android App
       run: flutter build appbundle
+
+    - name: Send Build
+      run: |
+        curl -F chat_id=${{ secrets.TELEGRAM_BOT_API_TOKEN }} \
+             -F document=@build/app/outputs/bundle/release/app-release.aab \
+             https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_API_TOKEN }}/sendDocument
+
+  build-market-home-apk:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: longht021189/checkout@d44347d65f3df181e8e7e6f567e958a67c47860d
+      with:
+        repository: ${{ secrets.MARKET_HOME_REPO }}
+        ref: ${{ secrets.MARKET_HOME_BRANCH }}
+        ssh-key-base64: ${{ secrets.SSH_PRIVATE_KEY }}
+        ssh-known-hosts-base64: ${{ secrets.SSH_KNOWN_HOSTS }}
+
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.10.6'
+
+    - name: Install dependencies
+      run: flutter pub get
+
+    - name: Build Android App
+      run: flutter build apk
+
+    - name: Send Build
+      run: |
+        curl -F chat_id=${{ secrets.TELEGRAM_BOT_API_TOKEN }} \
+             -F document=@build/app/outputs/bundle/release/app-release.apk \
+             https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_API_TOKEN }}/sendDocument
