--- a/.github/workflows/build-market-home.yaml
+++ b/.github/workflows/build-market-home.yaml
@@ -1,9 +1,12 @@
 name: Build-Market-Home
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      note:
+        description: 'Note'
+        required: false
+        type: string
 
 jobs:
   build-market-home-appbundle:
